--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 ## Railway settings
-#spring.redis.host=${REDISHOST}
-#spring.redis.port=${REDISPORT}
-#spring.redis.username=${REDISUSER}
-#spring.redis.password=${REDISPASSWORD}
+spring.redis.host=${REDISHOST}
+spring.redis.port=${REDISPORT}
+spring.redis.username=${REDISUSER}
+spring.redis.password=${REDISPASSWORD}
+spring.redis.client.type=jedis
+
 #spring.redis.client.type=jedis
 
 ## Local settings
